<resources>
    <string name="app_name">呸呸Pay</string>

    <!--SlideMenu Title Start-->
    <string name="slide_title_home">Home</string>
    <string name="slide_title_search">检索</string>
    <string name="slide_title_keep">收藏</string>
    <string name="slide_title_my_page">我的小卖部</string>
    <string name="slide_title_cart">购物车</string>
    <string name="slide_title_qr">QR</string>
    <string name="slide_title_other">其他</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_search">检索</string>
    <string name="title_activity_keep">收藏</string>
    <string name="title_activity_my_page">我的小卖部</string>
    <string name="title_activity_cart">购物车</string>
    <string name="title_activity_qr">QR</string>
    <string name="title_activity_other">其他</string>
    <!--SlideMenu Title End-->

    <!--API Error Start-->
    <string name="api_error_network_error">网络异常</string>
    <string name="api_error_find_no_goods">服务器没有找到这个商品</string>
    <!--API Error End-->

    <!--Title list Start-->
    <string name="title_rules">商品检索</string>
    <!--Title list End-->

    <!--Slide Menu Start-->
    <string name="slide_scan">扫一扫</string>
    <string name="slide_shop">小卖部</string>
    <string name="slide_cart">购物车</string>
    <string name="slide_buy_record">购买记录</string>
    <string name="slide_charge_record">充值记录</string>
    <string name="slide_mypage">个人信息</string>
    <!--Slide Menu End-->

    <!--Scan Start-->
    <string name="scan_searching">查找中</string>
    <string name="scan_searching_succuss">查询成功</string>
    <string name="scan_keep_searching">继续扫描</string>
    <string name="scan_stop_searching">暂停扫描</string>

    <string name="scan_xml_item_barcode">条形码：</string>
    <string name="scan_xml_item_status">状态：</string>
    <string name="scan_xml_item_goods_name">商品名：</string>
    <string name="scan_xml_item_price">售价：</string>
    <string name="scan_xml_item_value">原价</string>
    <string name="scan_xml_item_stock">库存：</string>
    <string name="scan_xml_item_class">类别：</string>
    <string name="scan_xml_item_note">备注：</string>
    <string name="scan_xml_item_add_to_cart">加入购物车</string>
    <string name="scan_xml_item_buy">立即购买</string>
    <!--Scan End-->

    <!--DialogButton Start-->
    <string name="dialog_button_cancel">取消</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_delete">删除</string>
    <string name="dialog_button_save">保存</string>
    <string name="dialog_button_ok_en">OK</string>
    <string name="dialog_button_cancel_en">CANCEL</string>
    <string name="dialog_button_retry_en">RETRY</string>
    <!--DialogButton End-->

    <!--Message Start-->
    <string name="error_network_title">通信异常</string>
    <string name="error_normal_title">Error</string>
    <string name="network_error">请确认网络状态后重试</string>
    <!--Message End-->

    <!-- Login Start -->
    <string name="login_title">登录</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">Go</string>
    <string name="login_empty_msg">请输入用户名和密码</string>
    <!-- Login End -->

    <!-- Shop Start-->
    <string name="search_hint">输入要搜索的商品...</string>
    <string name="clear_temp_cart">清空</string>

    <string-array name="search_sort_items">
        <item>默认</item>
        <item>名称</item>
        <item>库存</item>
        <item>售价</item>
    </string-array>
    <!-- Shop End-->
    <!-- Cart Start -->
    <string name="clear_cart">清空</string>
    <string name="select_all_cart">全选</string>
    <string name="cart_title">购物车</string>
    <string name="cart_order_price">总价：%.2f 元</string>
    <string name="cart_item_value">原价：%.2f 元</string>
    <string name="cart_item_price">单价：%.2f 元</string>

    <string name="cart_dialog_tip">长按识别指纹确定购买</string>
    <string name="cart_dialog_title">结账</string>
    <string name="cart_dialog_value_price">原价：%s 元</string>
    <string name="cart_dialog_order_price">飞狼劲爆价：%s 元</string>
    <string name="cart_dialog_outofstock">库存不足</string>
    <string name="cart_dialog_quantity">x%s</string>
    <string name="cart_dialog_pay_successfully">购买成功</string>
    <string name="cart_dialog_pay_nothing_to_buy">购物车没有选中的商品</string>

    <!-- Cart End -->

    <!-- History Start -->
    <string name="history_title">购买记录</string>
    <string name="history_item_original_price">原价：%.2f 元</string>
    <string name="history_item_price">单价：%.2f 元</string>
    <string name="history_order_price">总价：%s 元</string>

    <string-array name="my_page_tab_title">
        <item>历史订单</item>
        <item>充值记录</item>
    </string-array>
    <!-- History End -->

    <!-- Recharge Start -->
    <string name="recharge_title">充值记录</string>
    <string name="recharge_money">充值金额：</string>
    <string name="recharge_datepicker_deny_msg">"起始日期不能大于终止日期！"</string>
    <string name="recharge_datepicker_text">"FROM:%1$s\nTO:%2$s"</string>
    <string name="recharge_datepicker_hint">选择需要查询的日期&#8230;</string>
    <!-- Recharge End -->

    <!-- UserInfo Start -->
    <string name="userinfo_title">个人信息</string>

    <string name="userinfo_balance">倒欠公司</string>
    <string name="userinfo_account">你的用户名</string>
    <string name="userinfo_name">你的姓名</string>
    <string name="userinfo_point">你的飞狼币</string>
    <string name="userinfo_logout">登出</string>
    <string name="userinfo_changepassword">修改密码</string>
    <string name="userinfo_about">关于</string>

    <string name="userinfo_about_detail">本APP由成都市飞狼科技有限公司工会开发制作，且最终解释权归工会所有。</string>
    <string name="userinfo_not_availiable">暂时莫划选</string>

    //sheet dialog
    <string name="userinfo_sheetdialog_change_avatar">修改头像</string>
    <string name="userinfo_sheetdialog_change_background">修改背景</string>


    <string name="userinfo_changepassword_dialog_account">用户名</string>
    <string name="userinfo_changepassword_dialog_oldpassword">旧密码</string>
    <string name="userinfo_changepassword_dialog_newpassword">新密码</string>
    <string name="userinfo_changepassword_dialog_newpassword_confirm">确认密码</string>
    <string name="userinfo_changepassword_dialog_ok">确定</string>
    <string name="userinfo_write_stronge_permission_deny_msg">没有获得足够的权限</string>

    <string name="user_pass_change">修改密码</string>
    <string name="slide_logout">登出</string>
    <!-- UserInfo End -->

</resources>
