<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/old_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:imeOptions="actionNext"
                app:met_floatingLabel="highlight"
                android:lines="1"
                android:singleLine="true"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="@string/userinfo_changepassword_dialog_oldpassword"
                app:met_primaryColor="@color/main_color" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/new_password_edittext"
                android:layout_width="match_parent"
                android:lines="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="@string/userinfo_changepassword_dialog_newpassword"
                app:met_primaryColor="@color/main_color" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:singleLine="true"
                android:id="@+id/confirm_new_password_edittext"
                android:layout_width="match_parent"
                android:lines="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:imeOptions="actionDone"
                android:layout_marginStart="24dp"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="@string/userinfo_changepassword_dialog_newpassword_confirm"
                app:met_primaryColor="@color/main_color" />

        </LinearLayout>

    </LinearLayout>
</layout>