<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context="indi.yume.demo.newapplication.ui.fragment.qrscan.QrScanFragment">
    <data>
        <variable
            name="model"
            type="indi.yume.demo.newapplication.ui.fragment.qrscan.QrScanState"/>
        <variable
            name="handler"
            type="indi.yume.demo.newapplication.ui.fragment.qrscan.QrScanHandler"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bk"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <indi.yume.demo.newapplication.widget.barcode.ZXingScannerView
                android:id="@+id/goods_scanner_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/info_main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:weightSum="7">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/go_cart_button"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="top"
                        android:background="@drawable/black_button_back"
                        android:text="我的购物车"
                        android:textColor="@color/black_button_text_color"
                        tools:visibility="visible"
                        android:visibility="gone" />

                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"

                    android:padding="15dp">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_row="0"
                                android:text="@string/scan_xml_item_barcode"
                                android:textColor="@color/color_wh" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_marginBottom="8dp"
                                android:layout_marginStart="10dp"
                                android:layout_row="0"

                                android:textColor="@color/color_wh"
                                android:text='@{model.currentItem == null ? "" : model.currentItem.barCode}'
                                tools:text="129487123" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_row="1"
                                android:text="@string/scan_xml_item_status"
                                android:textColor="@color/color_wh" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_marginBottom="8dp"

                                android:layout_marginStart="10dp"
                                android:layout_row="1"

                                android:textColor="@color/color_wh"
                                app:resText="@{model.status}"
                                tools:text="未找到" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_row="2"

                                android:text="@string/scan_xml_item_goods_name"
                                android:textColor="@color/color_wh" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_marginBottom="8dp"

                                android:layout_marginStart="10dp"
                                android:layout_row="2"

                                android:textColor="@color/color_wh"
                                android:text='@{model.currentItem == null ? "" : model.currentItem.name}'
                                tools:text="日清" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_row="3"

                                android:text="@string/scan_xml_item_price"
                                android:textColor="@color/color_wh" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_marginBottom="8dp"
                                android:textColor="@color/color_wh"
                                android:text='@{model.currentItem == null ? "" : String.format("%.2f", model.currentItem.salePrice)}'

                                android:layout_marginStart="10dp"
                                android:layout_row="3" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_row="4"

                                android:text="@string/scan_xml_item_value"
                                android:textColor="@color/color_wh" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_marginBottom="8dp"
                                android:textColor="@color/color_wh"
                                android:text='@{model.currentItem == null ? "" : String.format("%.2f", model.currentItem.costPrice)}'

                                android:layout_marginStart="10dp"
                                android:layout_row="4" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_row="5"

                                android:text="@string/scan_xml_item_stock"
                                android:textColor="@color/color_wh" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_marginBottom="8dp"

                                android:layout_marginStart="10dp"
                                android:layout_row="5"

                                android:textColor="@color/color_wh"
                                android:text='@{model.currentItem == null ? "" : String.valueOf(model.currentItem.count)}'
                                tools:text="0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_row="6"

                                android:text="@string/scan_xml_item_class"
                                android:textColor="@color/color_wh" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_marginBottom="8dp"

                                android:layout_marginStart="10dp"
                                android:layout_row="6"

                                android:textColor="@color/color_wh"
                                android:text='@{model.currentItem == null ? "" : model.currentItem.className}'
                                tools:text="食品" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_column="0"
                                android:layout_columnSpan="2"
                                android:layout_row="7">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"

                                    android:text="@string/scan_xml_item_note"
                                    android:textColor="@color/color_wh" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:layout_marginBottom="8dp"
                                    android:layout_marginStart="10dp"

                                    android:textColor="@color/color_wh"
                                    android:text='@{model.currentItem == null ? "" : model.currentItem.note}'
                                    tools:text="无加入购物车加入购物车加入购物车加入购物车加入购物车加入购物车加入购物车加入购物车加入购物车加入购物车加入购物车加入购物车加入购物车" />

                            </LinearLayout>

                        </GridLayout>

                    </ScrollView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/black_button_back"
                            android:text="@string/scan_xml_item_add_to_cart"
                            android:textColor="@color/black_button_text_color"
                            android:onClick="@{(view) -> handler.addToCart(model.currentItem)}"
                            android:enabled="@{model.currentItem != null}" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="5dp" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/black_button_back"
                            android:text="@string/scan_xml_item_buy"
                            android:textColor="@color/black_button_text_color"
                            android:onClick="@{(view) -> handler.payNow(model.currentItem)}"
                            android:enabled="@{model.currentItem != null}" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="5dp" />

                        <Button
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:layout_gravity="top"
                            android:background="@drawable/black_button_back"
                            android:text="@{model.cameraIsRunning ? @string/scan_stop_searching : @string/scan_keep_searching}"
                            tools:text="@string/scan_stop_searching"
                            android:textColor="@color/black_button_text_color"
                            android:enabled="@{!model.loading}"
                            android:onClick="@{(view) -> handler.toggleCamera(model.cameraIsRunning)}"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</layout>