<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context="indi.yume.demo.newapplication.ui.fragment.other.OtherFragment">
    <data>
        <variable
            name="model"
            type="indi.yume.demo.newapplication.ui.fragment.other.OtherState"/>
        <variable
            name="handler"
            type="indi.yume.demo.newapplication.ui.fragment.other.OtherHandler"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_gr6" >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <indi.yume.demo.newapplication.widget.CustomToolbar
                    style="@style/ToolbarStyle"
                    android:id="@+id/toolbar"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:ct_navigationType="menu"
                    app:ct_title="@string/title_activity_other"/>

            </RelativeLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical|left"
                        android:background="?attr/selectableItemBackground"
                        android:onClick="@{(view) -> handler.modifyPassword()}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_settings_red_400_36dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/userinfo_changepassword" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="72dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/color_gr6" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical|left"
                        android:background="?attr/selectableItemBackground"
                        android:onClick="@{(view) -> handler.logout()}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_account_circle_red_400_36dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/userinfo_logout" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="72dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/color_gr6" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:background="?attr/selectableItemBackground"
                        android:onClick="@{(view) -> handler.about()}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_info_red_400_36dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/userinfo_about" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>